# PnPDataset

./: PROJECT_DETAILS.md  README.md
02-Index-MD/: B.md  D.md  E.md  F.md  M.md  O.md  P.md  Q-R.md  S.md  T.md  UVWXYZ.md
02-Markdown/: 00_01_Title_Copyright.md  00_02_Preface_2nd_Ed.md  00_03_Preface_1st_Ed.md  00_04_Contents.md  00_05_List_of_Plates.md  01_CHP-1.md  01_CHP-1_intro.md  01_CHP-1_sec_i.md  01_CHP-1_sec_ii.md  02_CHP-2.md  02_CHP-2_intro.md  02_CHP-2_sec_i.md  02_CHP-2_sec_ii.md  02_CHP-2_sec_iv.md  02_CHP-2_sec_vii.md  02_CHP-2_sec_viii.md  03_CHP-3.md  03_CHP-3_intro.md  03_CHP-3_sec_i.md  03_CHP-3_sec_ii.md  03_CHP-3_sec_iv.md  04_CHP-4.md  04_CHP-4_intro.md  04_CHP-4_sec_i.md  04_CHP-4_sec_ii.md  05_CHP-5.md  05_CHP-5_intro.md  05_CHP-5_sec_i.md  05_CHP-5_sec_iii.md  05_CHP-5_sec_iv.md  06_CHP-6.md  06_CHP-6_intro.md  06_CHP-6_sec_i.md  (+46 more)
18-Triplet-Link/: .gitignore  USAGE.md  main.py  pyproject.toml
18-Triplet-Link/.trae/documents/: Knowledge Graph Construction Pipeline Implementation Plan.md
18-Triplet-Link/data/output/: facts_semantic.tsv
18-Triplet-Link/docs/: DEVELOPMENT_NOTES.md  KG_BEST_PRACTICES.md  关于复杂关系的讨论.md  初步设计.md
18-Triplet-Link/scripts/: adjust_triplets.py  fix_csv_newlines.py  merge_csv.py
18-Triplet-Link/src/: config.py
18-Triplet-Link/src/pipeline/: runner.py  step0_preprocess.py  step2_candidates.py  step3_relations.py  step4_disambiguation.py  step5_facts.py  step6_graph.py
18-Triplet-Link/src/services/: llm.py  wikidata.py
18-Triplet-Link/src/utils/: clean_relations.py
18-Triplet-Link/tests/: test_pipeline.py
(+375 files in other folders)
